--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Polaroid Celebration: Cocktails & Booking Signing for Instant - The Story of Polaroid - 6 to 8pm</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -17,25 +17,30 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
+        <div id="main-content" role="main">
+            <!--[if lt IE 7]>
+                <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+            <![endif]-->
 
-        <div id="details">
-            <img id="title" src="img/card-title.jpg" alt="MDC Partners - Polaroid Celebration" />
-            <img id="description" src="img/card-description.jpg" alt="Instant - The Story of Polaroid" />
-            <img id="date" src="img/card-date.jpg" alt="October 30th - The MDC Innovation Centre, 745 5th Ave., 19th Floor" />
-        </div>
-        <div id="invitation">
-            <h1>Stop by for a minute.</h1>
-            <p>Celebrate one of the most influential products of our time that for 60 years did what no other invention could do. Learn about the man behind the camera who influenced the likes of Steve Jobs and Instagram &amp; expose yourself to instant gratification by snapping a few candid shots of your own.</p>
-            <a href="#">YES, I'M COMING</a>
-            <a href="#">NO, NOT THIS TIME</a>
+            <div id="details" role="banner">
+                <img id="title" src="img/card-title.jpg" alt="MDC Partners - Polaroid Celebration" />
+                <img id="description" src="img/card-description.jpg" alt="Instant - The Story of Polaroid by Christopher Bonanos - Book Signing & Cocktail Hour" />
+                <img id="date" src="img/card-date.jpg" alt="October 30th - The MDC Innovation Centre, 745 5th Ave., 19th Floor - From 6pm to 8pm" />
+            </div>
+
+            <div id="invitation">
+                <h1>Stop by for a minute.</h1>
+                <p>Celebrate one of the most influential products of our time that for 60 years did what no other invention could do. Learn about the man behind the camera who influenced the likes of Steve Jobs and Instagram &amp; expose yourself to instant gratification by snapping a few candid shots of your own.</p>
+                <a href="#" data-answer="yes">YES, I'M COMING</a>
+                <a href="#" data-answer="no">NO, NOT THIS TIME</a>
+            </div>
+
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+
     </body>
 </html>
