Styling the invitation section. Updating button styles to match the comp. Updated font-sizes in the invitation to match comp.

--- a/www/index.html
+++ b/www/index.html
@@ -31,8 +31,8 @@
             <div id="invitation">
                 <h1>Stop by for a minute.</h1>
                 <p>Celebrate one of the most influential products of our time that for 60 years did what no other invention could do. Learn about the man behind the camera who influenced the likes of Steve Jobs and Instagram &amp; expose yourself to instant gratification by snapping a few candid shots of your own.</p>
-                <a href="#" data-answer="yes">YES, I'M COMING</a>
-                <a href="#" data-answer="no">NO, NOT THIS TIME</a>
+                <a href="#yes" data-answer="yes">YES, I'M COMING</a>
+                <a href="#no" data-answer="no" class="no-btn">NO, NOT THIS TIME</a>
             </div>
 
         </div>
