Adding additional polaroid images to the layout and positioning.

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,8 @@
                 <a href="#yes" data-answer="yes">YES, I'M COMING</a>
                 <a href="#no" data-answer="no" class="no-btn">NO, NOT THIS TIME</a>
             </div>
-
+            <img src="/img/invitation-right-polaroid.png" alt="High Heeled Boot - Polaroid Picture" class="right-invite-polaroid" />
+            <img src="/img/body-right-polaroid.png" alt="Edge Polaroid Picture" class="body-right-polaroid" />
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
