--- a/www/index.html
+++ b/www/index.html
@@ -31,8 +31,15 @@
             <div id="invitation">
                 <h1>Stop by for a minute.</h1>
                 <p>Celebrate one of the most influential products of our time that for 60 years did what no other invention could do. Learn about the man behind the camera who influenced the likes of Steve Jobs and Instagram &amp; expose yourself to instant gratification by snapping a few candid shots of your own.</p>
-                <a href="#yes" data-answer="yes">YES, I'M COMING</a>
-                <a href="#no" data-answer="no" class="no-btn">NO, NOT THIS TIME</a>
+                <div id="answer-buttons">
+                    <a href="#yes" data-answer="yes">YES, I'M COMING</a>
+                    <a href="#no" data-answer="no" class="no-btn">NO, NOT THIS TIME</a>
+                </div>
+                <div id="thanks-notice">
+                    <h4>Thank you for your response! </h4>
+                    <p>We look forwarding to seeing you there!</p>
+                    <p class="no-msg">Maybe we'll see you next time!</p>
+                </div>
             </div>
             <img src="/img/invitation-right-polaroid.png" alt="High Heeled Boot - Polaroid Picture" class="right-invite-polaroid" />
             <img src="/img/body-right-polaroid.png" alt="Edge Polaroid Picture" class="body-right-polaroid" />
