Adjusting content to be a bit more semantic for a document outline. Something I missed originally and Richard Jones pointed out in comments. Fixing for personal edification/to reinforce the idea behind it.

--- a/www/index.html
+++ b/www/index.html
@@ -23,20 +23,20 @@
             <![endif]-->
 
             <div id="details" role="banner">
-                <img id="title" src="img/card-title.jpg" alt="MDC Partners - Polaroid Celebration" />
+                <h1><img id="title" src="img/card-title.jpg" alt="MDC Partners - Polaroid Celebration" /></h1>
                 <img id="description" src="img/card-description.jpg" alt="Instant - The Story of Polaroid by Christopher Bonanos - Book Signing & Cocktail Hour" />
                 <img id="date" src="img/card-date.jpg" alt="October 30th - The MDC Innovation Centre, 745 5th Ave., 19th Floor - From 6pm to 8pm" />
             </div>
 
             <div id="invitation">
-                <h1>Stop by for a minute.</h1>
+                <h2>Stop by for a minute.</h2>
                 <p>Celebrate one of the most influential products of our time that for 60 years did what no other invention could do. Learn about the man behind the camera who influenced the likes of Steve Jobs and Instagram &amp; expose yourself to instant gratification by snapping a few candid shots of your own.</p>
                 <div id="answer-buttons">
                     <a href="#yes" data-answer="yes">YES, I'M COMING</a>
                     <a href="#no" data-answer="no" class="no-btn">NO, NOT THIS TIME</a>
                 </div>
                 <div id="thanks-notice">
-                    <h4>Thank you for your response! </h4>
+                    <h3>Thank you for your response!</h3>
                     <p>We look forwarding to seeing you there!</p>
                     <p class="no-msg">Maybe we'll see you next time!</p>
                 </div>
